.xmonad/xmonad.errors

xmonad.hs:59:68: error:
    • Couldn't match expected type ‘Layout Window’
                  with actual type ‘XMonad.Layout.LayoutModifier.ModifiedLayout
                                      Spacing (Choose Tall Full) a0’
    • In the second argument of ‘($)’, namely ‘myLayout’
      In the expression: setLayout $ myLayout
      In the expression: ((m .|. shiftMask, xK_f), setLayout $ myLayout)
   |
59 |     ((m .|. shiftMask               , xK_f          ), setLayout $ myLayout),
   |                                                                    ^^^^^^^^
